--- a/src/mono/ios/Makefile
+++ b/src/mono/ios/Makefile
@@ -1,7 +1,7 @@
 MONO_CONFIG=Debug
 
 # change to x64 for simulator
-MONO_ARCH=x64
+MONO_ARCH=arm64
 MIN_IOS=10.1
 ARTIFACTS_BIN=../../../artifacts/bin/
 ARTIFACTS_BCL=$(ARTIFACTS_BIN)runtime/netcoreapp5.0-iOS-$(MONO_CONFIG)-$(MONO_ARCH)
@@ -10,33 +10,35 @@ ARTIFACTS_MONO=$(ARTIFACTS_BIN)/mono/iOS.$(MONO_ARCH).$(MONO_CONFIG)
 DOTNET := $(shell cd ../netcore && bash init-tools.sh | tail -1)
 SYSROOT := $(shell xcrun --sdk iphoneos --show-sdk-path)
 
-# copy all BCL libs and Mono runtime to `bcl-*` folder
-prepare: bcl-$(MONO_ARCH)/.configured
-
-bcl-$(MONO_ARCH)/.configured:
-	rm -rf bcl-$(MONO_ARCH)
-	mkdir bcl-$(MONO_ARCH)
-	cp $(ARTIFACTS_BCL)/*.dll bcl-$(MONO_ARCH)/
-	cp $(ARTIFACTS_MONO)/*.{dll,dylib,pdb} bcl-$(MONO_ARCH)/
-	for lib in bcl-$(MONO_ARCH)/*.dll; do make aot-lib-${MONO_ARCH} LIB=$$lib; done
-	touch bcl-$(MONO_ARCH)/.configured
-
-aot-bcl-%:
-	make aot-lib-$(MONO_ARCH) LIB=bcl-$(MONO_ARCH)/$*
-
-# run AOT for all libs inside bcl-*
-aot-bcl: $(addprefix aot-bcl-, $(notdir $(wildcard bcl-$(MONO_ARCH)/*.dll)))
-
-aot-test:
+# copy all dlls into a tmp folder (tmp-$(MONO_ARCH)) including the whole BCL
+# and run AOT for them in parallel
+aot-test-$(MONO_ARCH): clean
+	mkdir tmp-$(MONO_ARCH)
 	@if test -z "$(TEST_DIR)"; then echo "TEST_DIR is not set"; exit 1; fi
 	if [ ! -d "$(ARTIFACTS_BIN)$(TEST_DIR)" ]; then echo "$(ARTIFACTS_BIN)$(TEST_DIR) doesn't exist"; exit 1; fi
 	$(DOTNET) build -c Debug TestRunner.csproj
-	cp bin/TestRunner/TestRunner.dll $(ARTIFACTS_BIN)$(TEST_DIR)/
-	make -j$(NPROCS) prepare
-		for assembly in $(ARTIFACTS_BIN)$(TEST_DIR)/*.dll; do \
-		make aot-lib-$(MONO_ARCH) LIB=$$assembly; \
-	done;
-	make xcode MONO_TEST=$(ARTIFACTS_BIN)$(TEST_DIR)
+	cp bin/TestRunner/TestRunner.dll tmp-$(MONO_ARCH)/
+	cp $(ARTIFACTS_BCL)/*.{dll,pdb} tmp-$(MONO_ARCH)/
+	cp $(ARTIFACTS_MONO)/*.{dll,pdb} tmp-$(MONO_ARCH)/
+	cp $(ARTIFACTS_BIN)$(TEST_DIR)/*.{dll,pdb} tmp-$(MONO_ARCH)/
+	make -j$(NPROCS) aot-dir
+	$(DOTNET) run -p appbuilder tmp-$(MONO_ARCH) modules.m
+	make xcode MONO_APPDIR=tmp-$(MONO_ARCH)
+
+BCL_EXCLUDES =\
+	tmp-$(MONO_ARCH)/System.Runtime.WindowsRuntime.dll
+
+aot-dir-%:
+	make aot-lib-$(MONO_ARCH) LIB=tmp-$(MONO_ARCH)/$*
+
+aot-dir: $(addprefix aot-dir-, $(notdir $(filter-out $(BCL_EXCLUDES), $(wildcard tmp-$(MONO_ARCH)/*.dll))))
+
+# sample: run xunit tests in System.Collections.NonGeneric.Tests.dll
+# NOTE: 'mono-libraries-tests' should be run first
+# NOTE2: don't use tests suites with remote executor usages (on device)
+run-System.Collections.NonGeneric.Tests:
+	make aot-test-$(MONO_ARCH) \
+	TEST_DIR=System.Collections.NonGeneric.Tests/netcoreapp5.0-Debug
 
 # no-op: we'll use regular jit for simulator
 aot-lib-x64:
@@ -44,10 +46,10 @@ aot-lib-x64:
 # run AOT compilation for $(LIB)
 aot-lib-arm64:
 	echo "[AOT] $(LIB)";
-	DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1 MONO_PATH=bcl-$(MONO_ARCH) \
+	DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1 MONO_PATH=tmp-$(MONO_ARCH) \
 	$(ARTIFACTS_MONO)/cross/./mono-aot-cross -O=gsharedvt,float32 --nollvm --debug \
 	--aot=mtriple=arm64-ios,static,asmonly,direct-icalls,no-direct-calls,dwarfdebug,full, $(LIB) && \
-	clang -isysroot $(SYSROOT) -miphoneos-version-min=$(MIN_IOS) -arch arm64 -c $(LIB).s
+	clang -isysroot $(SYSROOT) -miphoneos-version-min=$(MIN_IOS) -arch arm64 -c $(LIB).s -o $(LIB).o
 
 # rebuild mono, bcl and tests for iOS-$(MONO_ARCH)
 mono-libraries-tests:
@@ -63,8 +65,7 @@ xcode:
 	-DCMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH=NO \
 	-DMONO_CONFIG=$(MONO_CONFIG) \
 	-DMONO_ARCH=$(MONO_ARCH) \
-	-DMONO_TEST=$(MONO_TEST) \
-	-DMONO_BCL=bcl-$(MONO_ARCH)
+	-DMONO_APPDIR=$(MONO_APPDIR)
 
 # build *.app and deploy to a simulator
 IOS_DEPLOY_SDK=iphonesimulator13.2
@@ -78,6 +79,7 @@ run-tests-sim:
 	xcrun simctl launch booted net.dot.XunitTestRunner
 
 clean:
-	rm -rf bcl-*
+	rm -rf modules.m
+	rm -rf tmp-*
 	rm -rf bin
 	rm -rf Xcode
